--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,158 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:background="@color/white">
 
-   <ImageView
-       android:id="@+id/iv_top_bg"
-       android:layout_width="match_parent"
-       android:layout_height="227dp"
-       android:background="@drawable/mine_bg"
-       />
-   <ImageView
-       android:id="@+id/iv_avatar"
-       android:layout_width="90dp"
-       android:layout_height="90dp"
-       android:layout_centerHorizontal="true"
-       android:layout_marginTop="79dp"
-       android:src="@drawable/default_avatar"
-       android:background="@drawable/shape_white_round_bg"/>
-   <TextView
-       android:id="@+id/tv_nickname"
-       android:layout_marginTop="10dp"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_centerHorizontal="true"
-       android:layout_below="@id/iv_avatar"
-       android:textColor="@color/color_F6F6F6"
-       android:textSize="16sp"
-       android:padding="10dp"
-       android:text="点击登录"/>
+        <ImageView
+            android:id="@+id/iv_top_bg"
+            android:layout_width="match_parent"
+            android:layout_height="227dp"
+            android:background="@drawable/mine_bg"
+            />
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="61dp"
+            android:src="@drawable/default_avatar"
+            android:background="@drawable/shape_white_round_bg"/>
+        <TextView
+            android:id="@+id/tv_nickname"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/iv_avatar"
+            android:textColor="@color/color_F6F6F6"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:text="点击登录"/>
 
-   <RelativeLayout
-       android:id="@+id/rl_my_resume"
-       android:layout_marginTop="40dp"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:paddingLeft="33dp"
-       android:paddingRight="33dp"
-       android:layout_below="@id/iv_top_bg">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textColor="@color/color_0d0d0d"
-          android:text="我的简历"
-          android:textSize="16sp"
-          android:gravity="center"
-          android:drawablePadding="16sp"
-          android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/my_resume_icon"/>
+        <RelativeLayout
+            android:id="@+id/rl_my_resume"
+            android:layout_marginTop="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/iv_top_bg">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="我的简历"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/my_resume_icon"/>
 
-      <ImageView
-          android:layout_width="7dp"
-          android:layout_height="12dp"
-          android:src="@drawable/right_gray_arrow"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          />
-   </RelativeLayout>
-   <RelativeLayout
-       android:id="@+id/rl_my_apply"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:paddingLeft="33dp"
-       android:paddingRight="33dp"
-       android:layout_below="@id/rl_my_resume">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textColor="@color/color_0d0d0d"
-          android:text="我的报名"
-          android:textSize="16sp"
-          android:gravity="center"
-          android:drawablePadding="16sp"
-          android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/my_apply_icon"/>
-      <ImageView
-          android:layout_width="7dp"
-          android:layout_height="12dp"
-          android:src="@drawable/right_gray_arrow"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          />
-   </RelativeLayout>
-   <RelativeLayout
-       android:id="@+id/rl_change_nick_name"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:paddingLeft="33dp"
-       android:paddingRight="33dp"
-       android:layout_below="@id/rl_my_apply">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textColor="@color/color_0d0d0d"
-          android:text="修改昵称"
-          android:textSize="16sp"
-          android:gravity="center"
-          android:drawablePadding="16sp"
-          android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/nick_icon"/>
-      <ImageView
-          android:layout_width="7dp"
-          android:layout_height="12dp"
-          android:src="@drawable/right_gray_arrow"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          />
-   </RelativeLayout>
-   <RelativeLayout
-       android:id="@+id/rl_about_us"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:paddingLeft="33dp"
-       android:paddingRight="33dp"
-       android:layout_below="@id/rl_change_nick_name">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textColor="@color/color_0d0d0d"
-          android:text="关于我们"
-          android:textSize="16sp"
-          android:gravity="center"
-          android:drawablePadding="16sp"
-          android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/aboult_us_icon"/>
-      <ImageView
-          android:layout_width="7dp"
-          android:layout_height="12dp"
-          android:src="@drawable/right_gray_arrow"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          />
-   </RelativeLayout>
-   <RelativeLayout
-       android:id="@+id/rl_feedback"
-       android:layout_width="match_parent"
-       android:layout_height="56dp"
-       android:paddingLeft="33dp"
-       android:paddingRight="33dp"
-       android:layout_below="@id/rl_about_us">
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textColor="@color/color_0d0d0d"
-          android:text="意见反馈"
-          android:textSize="16sp"
-          android:gravity="center"
-          android:drawablePadding="16sp"
-          android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/ic_feedback"/>
-      <ImageView
-          android:layout_width="7dp"
-          android:layout_height="12dp"
-          android:src="@drawable/right_gray_arrow"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          />
-   </RelativeLayout>
-</RelativeLayout>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_my_apply"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/rl_my_resume">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="我的报名"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/my_apply_icon"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_change_nick_name"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/rl_my_apply">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="修改昵称"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/nick_icon"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+
+        <View
+            android:layout_below="@+id/rl_change_nick_name"
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="#f7f7f7" />
+        <RelativeLayout
+            android:id="@+id/rl_about_us"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/line">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="关于我们"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/about_us_icon"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_feedback"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/rl_about_us">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="意见反馈"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/ic_feedback"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_yinsixieyi"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/rl_feedback">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="隐私协议"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/ic_yinsixieyi"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_cancel_yinsixieyi"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:layout_below="@id/rl_yinsixieyi">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_0d0d0d"
+                android:text="撤销同意隐私协议"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:drawablePadding="16sp"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/ic_cancel_yinsixieyi"/>
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="12dp"
+                android:src="@drawable/right_gray_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
