--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_top_bg"
         android:layout_width="match_parent"
         android:layout_height="227dp"
-        android:background="@drawable/mine_bg"/>
+        android:background="@drawable/login_bg"/>
     <TextView
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
