--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:button="@null"
             android:drawablePadding="4dp"
             android:text="@string/menu_home"
+            android:background="@color/transparent"
             android:textColor="@color/menu_home_text_color"
             android:drawableTop="@drawable/menu_home"/>
         <RadioButton
@@ -43,20 +44,10 @@
             android:button="@null"
             android:drawablePadding="4dp"
             android:text="精选"
+            android:background="@color/transparent"
+            android:visibility="gone"
             android:textColor="@color/menu_home_text_color"
             android:drawableTop="@drawable/menu_jingxuan"/>
-        <RadioButton
-            android:id="@+id/rb_all"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="10sp"
-            android:button="@null"
-            android:drawablePadding="4dp"
-            android:text="@string/menu_all"
-            android:textColor="@color/menu_home_text_color"
-            android:drawableTop="@drawable/menu_all"/>
         <RadioButton
             android:id="@+id/rb_recommend"
             android:layout_width="0dp"
@@ -68,8 +59,25 @@
             android:visibility="visible"
             android:drawablePadding="4dp"
             android:text="@string/menu_recommend"
+            android:background="@color/transparent"
             android:textColor="@color/menu_home_text_color"
             android:drawableTop="@drawable/menu_recommend"/>
+        <RadioButton
+            android:id="@+id/rb_hot"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:button="@null"
+            android:drawablePadding="4dp"
+            android:text="@string/menu_hot"
+            android:background="@color/transparent"
+            android:textColor="@color/menu_home_text_color"
+            android:drawableTop="@drawable/menu_hot"/>
+
+
+
         <RadioButton
             android:id="@+id/rb_mine"
             android:layout_width="0dp"
@@ -78,6 +86,7 @@
             android:gravity="center"
             android:textSize="10sp"
             android:button="@null"
+            android:background="@color/transparent"
             android:drawablePadding="4dp"
             android:text="@string/menu_mine"
             android:textColor="@color/menu_home_text_color"
