--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -6,6 +6,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
+       android:visibility="gone"
        android:src="@drawable/ic_bg_home"
        />
 
