--- a/app/src/main/res/layout/item_jx_content.xml
+++ b/app/src/main/res/layout/item_jx_content.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
+    android:layout_height="77dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/jx_item_bg1">
 
@@ -13,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
         android:text="微信在线兼职，随时随地做，秒结"
         android:drawablePadding="5dp"
         android:lines="1"
@@ -23,7 +24,6 @@
     <RelativeLayout
         android:layout_below="@id/tv_job_title"
         android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_job_money"
@@ -41,17 +41,26 @@
             android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_B8B7BA"
+            android:textColor="@color/white"
             android:textSize="11sp"
             android:text="元/天"/>
         <com.zhy.view.flowlayout.TagFlowLayout
             android:id="@+id/fl_job_desc"
-            android:layout_toRightOf="@id/tv_job_unit"
-            android:layout_marginLeft="18dp"
+            android:layout_alignParentRight="true"
             android:layout_alignBottom="@id/tv_job_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:tag_gravity="center" />
+        <ImageView
+            android:id="@+id/iv_verify"
+            android:layout_alignBottom="@id/tv_job_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/tv_job_unit"
+            android:src="@drawable/verify_head2"
+            android:visibility="visible"
+            android:layout_marginTop="10dp"/>
     </RelativeLayout>
 
 </RelativeLayout>
