--- a/app/src/main/res/layout/tag_detail4.xml
+++ b/app/src/main/res/layout/tag_detail4.xml
@@ -4,12 +4,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#A0A2A4"
+        android:textColor="#FF383952"
         android:textSize="11sp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/shape_retangle_f2f4f5_r2"
+        android:background="@drawable/shape_cn2_f3f3f3"
         android:text="日结"/>
