--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
        android:layout_marginTop="26dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
-       android:background="@drawable/home_search_bg"
+       android:background="@drawable/home_search_bg_gray"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="6dp"
@@ -43,7 +43,6 @@
 
    </LinearLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-       android:layout_below="@id/rl_search"
        android:id="@+id/smart_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
