--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -17,7 +17,7 @@
        android:layout_marginTop="26dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
-       android:background="@drawable/home_search_bg"
+       android:background="@drawable/home_search_bg_gray"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="6dp"
