ui基本修改完成

--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -222,7 +222,7 @@
                             android:layout_height="15dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginLeft="10dp"
-                            android:src="@drawable/company_auth_icon"/>
+                            android:src="@drawable/verify_head"/>
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
