--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -10,39 +10,46 @@
        android:visibility="gone"
        android:src="@drawable/ic_bg_home"
        />
-
-   <LinearLayout
-       android:id="@+id/rl_search"
+   <RelativeLayout
+       android:id="@+id/rl_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:layout_marginTop="26dp"
-       android:layout_marginBottom="6dp"
-       android:orientation="horizontal"
-       android:background="@drawable/home_search_bg_gray"
-       android:paddingLeft="18dp"
-       android:paddingRight="18dp"
-       android:paddingTop="6dp"
-       android:paddingBottom="6dp"
-       android:gravity="center_vertical"
-       android:layout_marginRight="14dp"
-       android:layout_marginLeft="14dp">
-      <ImageView
-          android:layout_width="15dp"
-          android:layout_height="15dp"
-          android:layout_marginRight="16dp"
-          android:src="@drawable/home_search_icon"/>
-      <TextView
-          android:id="@+id/tv_search"
-          android:layout_width="wrap_content"
+       android:background="#FC6D3F">
+      <LinearLayout
+          android:id="@+id/rl_search"
+          android:layout_centerInParent="true"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:textSize="15sp"
-          android:text="搜索"
-          android:textColor="@color/color_939393"
-          />
+          android:layout_marginTop="26dp"
+          android:layout_marginBottom="6dp"
+          android:orientation="horizontal"
+          android:background="@drawable/home_search_bg_white"
+          android:paddingLeft="18dp"
+          android:paddingRight="18dp"
+          android:paddingTop="6dp"
+          android:paddingBottom="6dp"
+          android:gravity="center_vertical"
+          android:layout_marginRight="14dp"
+          android:layout_marginLeft="14dp">
+         <ImageView
+             android:layout_width="15dp"
+             android:layout_height="15dp"
+             android:layout_marginRight="16dp"
+             android:src="@drawable/home_search_icon"/>
+         <TextView
+             android:id="@+id/tv_search"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textSize="15sp"
+             android:text="搜索"
+             android:textColor="@color/color_939393"
+             />
 
-   </LinearLayout>
+      </LinearLayout>
+   </RelativeLayout>
+
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-       android:layout_below="@id/rl_search"
+       android:layout_below="@id/rl_search_wrapper"
        android:id="@+id/smart_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
