--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_job_unit"
         android:layout_alignParentRight="true"
-        android:src="@drawable/verify_head"
+        android:src="@drawable/verify_head2"
         android:visibility="visible"
         android:layout_marginTop="10dp"/>
 </RelativeLayout>
