ui修改完成大部分

--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/color_B8B7BA"
+        android:textColor="@color/color_money_unit"
         android:textSize="11sp"
         android:text="元/天"/>
     <TextView
