--- a/app/src/main/res/layout/layout_jx_top2.xml
+++ b/app/src/main/res/layout/layout_jx_top2.xml
@@ -3,14 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
+
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="62dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_marginBottom="10dp"
         android:background="@color/white"
         android:orientation="horizontal">
@@ -70,4 +71,5 @@
         </LinearLayout>
 
     </LinearLayout>
+    <include layout="@layout/item_divider" />
 </LinearLayout>
