--- a/app/src/main/res/layout/layout_tj_top.xml
+++ b/app/src/main/res/layout/layout_tj_top.xml
@@ -10,7 +10,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="104dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:background="@color/white"
             android:orientation="horizontal">
 
@@ -20,20 +22,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_tab_1"
-                    android:layout_width="46dp"
-                    android:layout_height="46dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="78dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/top_menu_jdyz" />
+                    android:src="@drawable/tj_top1" />
 
                 <TextView
                     android:id="@+id/tv_tab1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="简单上手"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     android:textColor="@color/color_241D1D"
                     android:textSize="12sp" />
@@ -45,14 +50,16 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_tab_2"
-                    android:layout_width="46dp"
-                    android:layout_height="46dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="78dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/top_menu_zjtz" />
+                    android:src="@drawable/tj_top2" />
 
                 <TextView
                     android:id="@+id/tv_tab2"
@@ -60,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:text="在家躺赚"
                     android:layout_marginTop="10dp"
+                    android:visibility="gone"
                     android:textColor="@color/color_241D1D"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -70,20 +78,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_tab_3"
-                    android:layout_width="46dp"
-                    android:layout_height="46dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="78dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/top_menu_gxrj" />
+                    android:src="@drawable/tj_top3" />
 
                 <TextView
                     android:id="@+id/tv_tab3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="轻松兼职"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     android:textColor="@color/color_241D1D"
                     android:textSize="12sp" />
@@ -95,6 +106,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:visibility="gone"
                 android:orientation="vertical">
 
                 <ImageView
@@ -140,5 +152,5 @@
             </LinearLayout>
         </LinearLayout>
 
-            <include layout="@layout/item_divider" />
+    <include layout="@layout/item_divider" />
     </LinearLayout>
