--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -4,11 +4,21 @@
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingLeft="14dp"
     android:paddingRight="14dp"
-    android:minHeight="66dp"
+    android:minHeight="75dp"
     android:background="@drawable/recyclerview_touch_bg"
     >
-
+    <ImageView
+        android:id="@+id/iv_verify"
+        android:layout_marginRight="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_job_unit"
+        android:layout_centerVertical="true"
+        android:src="@drawable/verify_head2"
+        android:visibility="visible"
+        android:layout_marginTop="10dp"/>
     <TextView
+        android:layout_toRightOf="@id/iv_verify"
         android:id="@+id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +29,7 @@
         android:textSize="16sp" />
     <TextView
         android:id="@+id/tv_job_unit"
-        android:layout_marginTop="18dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,7 +38,7 @@
         android:text="元/天"/>
     <TextView
         android:id="@+id/tv_job_money"
-        android:layout_marginTop="8dp"
+        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_toLeftOf="@id/tv_job_unit"
         android:layout_height="wrap_content"
@@ -40,10 +50,12 @@
     <com.zhy.view.flowlayout.TagFlowLayout
         android:id="@+id/fl_job_desc"
         android:layout_marginTop="6dp"
+        android:layout_toRightOf="@id/iv_verify"
         android:layout_below="@id/tv_job_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="18dp"
+        android:layout_marginBottom="14dp"
         app:tag_gravity="center" />
     <TextView
         android:id="@+id/tv_job_desc"
@@ -69,17 +81,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginRight="14dp"
-        android:layout_below="@id/fl_job_desc"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
         android:background="@color/divider"/>
-    <ImageView
-        android:id="@+id/iv_verify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_job_unit"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/verify_head2"
-        android:visibility="visible"
-        android:layout_marginTop="10dp"/>
+
 </RelativeLayout>
