--- a/app/src/main/res/layout/layout_sy_top_grid.xml
+++ b/app/src/main/res/layout/layout_sy_top_grid.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"/>
 
     <include layout="@layout/item_divider" />
 </LinearLayout>
