--- a/app/src/main/res/layout/layout_jx_top2.xml
+++ b/app/src/main/res/layout/layout_jx_top2.xml
@@ -71,5 +71,6 @@
         </LinearLayout>
 
     </LinearLayout>
-    <include layout="@layout/item_divider" />
+    <include layout="@layout/item_divider"
+        android:visibility="gone"/>
 </LinearLayout>
