--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -14,7 +14,7 @@
        android:id="@+id/rl_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:background="#fff">
+       android:background="@color/color_main_text">
       <LinearLayout
           android:id="@+id/rl_search"
           android:layout_width="match_parent"
@@ -22,7 +22,7 @@
           android:layout_marginTop="26dp"
           android:layout_marginBottom="6dp"
           android:orientation="horizontal"
-          android:background="@drawable/home_search_bg_gray"
+          android:background="@drawable/home_search_bg_white"
           android:paddingLeft="18dp"
           android:paddingRight="18dp"
           android:paddingTop="6dp"
