--- a/app/src/main/res/layout/item_home_hot_recommend.xml
+++ b/app/src/main/res/layout/item_home_hot_recommend.xml
@@ -77,9 +77,9 @@
         android:id="@+id/iv_verify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_job_unit"
+        android:layout_alignBottom="@id/fl_job_desc"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentRight="true"
         android:src="@drawable/verify_head2"
-        android:visibility="visible"
-        android:layout_marginTop="10dp"/>
+        android:visibility="visible" />
 </RelativeLayout>
