--- a/app/src/main/res/layout/tag_detail3.xml
+++ b/app/src/main/res/layout/tag_detail3.xml
@@ -4,7 +4,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FD440E"
+        android:textColor="#FF15BD50"
         android:textSize="11sp"
         android:paddingLeft="7dp"
         android:paddingRight="7dp"
