--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -128,6 +128,7 @@
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:background="@drawable/shape_retangle_5aa1fd_r25"
                     android:text="点击复制联系方式 QQ:1234567890>"/>
                 <ImageView
